# service-quotas

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: audit.yml  ci.yml  publish.yml  rust.yml
src/: cli.rs  cloudwatch.rs  config.rs  lib.rs  main.rs  notifiers.rs  quota.rs  quotas.rs  service.rs  servicequotas.rs  services.rs  util.rs
src/notifiers/: pagerduty.rs
src/quota/: lambda.rs
src/quotas/: lambda.rs
src/services/: cloudwatch.rs  ec2.rs  lambda.rs  servicequota.rs
