[package]
name = "service-quotas"
version = "0.0.2"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
aws-config = "0.51"
aws-sdk-ec2 = "0.21.0"
aws-sdk-servicequotas = "0.21.0"
aws-sdk-cloudwatch = "0.21.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"