[package]
name = "service-quotas"
version = "0.0.8"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-mutex = "1.4"
async-trait = "0.1"
aws-config = "0.51"
aws-sdk-servicequotas = "0.21"
aws-sdk-cloudwatch = "0.21"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "0.9"
aws-sdk-lambda = "0.21.0"
